# esxi-img

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-test.yaml  pre-commit.yaml  release.yaml
esxi-img/: pyproject.toml
esxi-img/esxi_img/data/: ks-template.cfg
python/esxi-img/: .gitignore  pyproject.toml
python/esxi-img/esxi_img/: cmd.py
python/esxi-img/esxi_img/data/: ks-template.cfg
src/esxi_img/: cmd.py  tarball.py
src/esxi_img/data/: README.md  ks-template.cfg
src/esxi_img/data/firstboot/: 40-network.sh  98-reboot.sh
src/esxi_img/data/post/: 10-configdrive-module.sh  15-netinit-module.sh
src/esxi_img/data/pre/: 10-fix-disks.sh  12-mount-configdrive.sh  15-set-root-passwd.py  90-umount-configdrive.sh
tests/: test_tarball.py
