[project]
name = "esxi-img"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esxi-netinit",
    "pycdlib>=1.14.0",
]

[project.scripts]
esxi-img = "esxi_img.cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
esxi-netinit = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]


[tool.ruff]
# use our default and override anything we need specifically
extend = "../pyproject.toml"
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"esxi_img/cmd.py" = [
    "S603",     # subprocess untrusted input
    "S607",     # subprocess partial path
]
